spacing fix

--- a/src/Components/teachers/teachers.scss
+++ b/src/Components/teachers/teachers.scss
@@ -33,7 +33,7 @@
 }
 .descriptions-teacher{
     // border:1px solid blue;
-    width: 20%;
+    width: 25%;
     height: 100%;
     display:flex;
     flex-direction: column;
